{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 93,
  "lineage": "8e6f9ba3-b6d1-2990-95ca-62f91d2861e5",
  "resources": [
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:internet-gateway/igw-0aee23de44f5a700d",
            "id": "igw-0aee23de44f5a700d",
            "owner_id": "637423591266",
            "tags": {
              "Name": "Zing-igw"
            },
            "tags_all": {
              "Name": "Zing-igw"
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ad40dd8984ce75c",
            "arn": "arn:aws:ec2:us-west-2:637423591266:elastic-ip/eipalloc-03ad40dd8984ce75c",
            "association_id": "eipassoc-076df3a610f2c4751",
            "domain": "vpc",
            "id": "eipalloc-03ad40dd8984ce75c",
            "network_border_group": "us-west-2",
            "network_interface": "eni-056c8af341cd07c64",
            "private_dns": "ip-10-0-0-5.us-west-2.compute.internal",
            "private_ip": "10.0.0.5",
            "public_dns": "ec2-54-244-188-78.us-west-2.compute.amazonaws.com",
            "public_ip": "54.244.188.78",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Zing-nat-eip"
            },
            "tags_all": {
              "Name": "Zing-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ad40dd8984ce75c",
            "association_id": "eipassoc-076df3a610f2c4751",
            "connectivity_type": "public",
            "id": "nat-0058518e9465f22b6",
            "network_interface_id": "eni-056c8af341cd07c64",
            "private_ip": "10.0.0.5",
            "public_ip": "54.244.188.78",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01968f16b673877b9",
            "tags": {
              "Name": "Zing-nat-gateway"
            },
            "tags_all": {
              "Name": "Zing-nat-gateway"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "custom_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:network-acl/acl-0e9636fc209f1deaa",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 140,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "52.26.224.194/32",
                "from_port": 3389,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 3389
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3389,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 3389
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 445,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 445
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 6667,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 6667
              }
            ],
            "id": "acl-0e9636fc209f1deaa",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 140,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "52.26.224.194/32",
                "from_port": 3389,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 3389
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3389,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 3389
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 445,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 445
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 6667,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 6667
              }
            ],
            "owner_id": "637423591266",
            "subnet_ids": [
              "subnet-02c332c3f7d7efefa",
              "subnet-031f62fe8c628b603"
            ],
            "tags": {
              "Name": "Custom Network ACL"
            },
            "tags_all": {
              "Name": "Custom Network ACL"
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:route-table/rtb-073577ea5d0c05731",
            "id": "rtb-073577ea5d0c05731",
            "owner_id": "637423591266",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Zing-private-rt"
            },
            "tags_all": {
              "Name": "Zing-private-rt"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:route-table/rtb-0223e16efce4c5ccc",
            "id": "rtb-0223e16efce4c5ccc",
            "owner_id": "637423591266",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Zing-public-rt"
            },
            "tags_all": {
              "Name": "Zing-public-rt"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-041e4e0ddc9ac8111",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048b4da582722bbc5",
            "route_table_id": "rtb-073577ea5d0c05731",
            "subnet_id": "subnet-041e4e0ddc9ac8111"
          }
        },
        {
          "index_key": "subnet-046cd1d433bad7102",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e51039dce5e9e1f",
            "route_table_id": "rtb-073577ea5d0c05731",
            "subnet_id": "subnet-046cd1d433bad7102"
          }
        },
        {
          "index_key": "subnet-04c83877427c7df91",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0851a5678f9b81289",
            "route_table_id": "rtb-073577ea5d0c05731",
            "subnet_id": "subnet-04c83877427c7df91"
          }
        },
        {
          "index_key": "subnet-053d056232e4a5dd4",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d725563309b53ce4",
            "route_table_id": "rtb-073577ea5d0c05731",
            "subnet_id": "subnet-053d056232e4a5dd4"
          }
        },
        {
          "index_key": "subnet-06682df5e1f956fbb",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bebbfbc7f7bd3bb",
            "route_table_id": "rtb-073577ea5d0c05731",
            "subnet_id": "subnet-06682df5e1f956fbb"
          }
        },
        {
          "index_key": "subnet-0b06da97c6f86cadb",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059a252a5b90ee6d7",
            "route_table_id": "rtb-073577ea5d0c05731",
            "subnet_id": "subnet-0b06da97c6f86cadb"
          }
        },
        {
          "index_key": "subnet-0c3ce5dcb1fe02bcb",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0360c4a3d5b6e9b37",
            "route_table_id": "rtb-073577ea5d0c05731",
            "subnet_id": "subnet-0c3ce5dcb1fe02bcb"
          }
        },
        {
          "index_key": "subnet-0e6eba414c973daa7",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0885075ad02c3bb83",
            "route_table_id": "rtb-073577ea5d0c05731",
            "subnet_id": "subnet-0e6eba414c973daa7"
          }
        }
      ]
    },
    {
      "module": "module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-00817c06df8dc4734",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056017031c2a2c82f",
            "route_table_id": "rtb-0223e16efce4c5ccc",
            "subnet_id": "subnet-00817c06df8dc4734"
          }
        },
        {
          "index_key": "subnet-01968f16b673877b9",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0196e64af8279fb8d",
            "route_table_id": "rtb-0223e16efce4c5ccc",
            "subnet_id": "subnet-01968f16b673877b9"
          }
        },
        {
          "index_key": "subnet-02c332c3f7d7efefa",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0487d6d81b26638a5",
            "route_table_id": "rtb-0223e16efce4c5ccc",
            "subnet_id": "subnet-02c332c3f7d7efefa"
          }
        },
        {
          "index_key": "subnet-031f62fe8c628b603",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e25d6aed1eb6c531",
            "route_table_id": "rtb-0223e16efce4c5ccc",
            "subnet_id": "subnet-031f62fe8c628b603"
          }
        },
        {
          "index_key": "subnet-04f949d7c7c91ea8e",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e40988d9adaeb9e",
            "route_table_id": "rtb-0223e16efce4c5ccc",
            "subnet_id": "subnet-04f949d7c7c91ea8e"
          }
        },
        {
          "index_key": "subnet-06e37d1f09fac92af",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07620bde92502880d",
            "route_table_id": "rtb-0223e16efce4c5ccc",
            "subnet_id": "subnet-06e37d1f09fac92af"
          }
        },
        {
          "index_key": "subnet-07b80e92955ea9cc4",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0378c573be2ed1e0a",
            "route_table_id": "rtb-0223e16efce4c5ccc",
            "subnet_id": "subnet-07b80e92955ea9cc4"
          }
        },
        {
          "index_key": "subnet-0d551d3e5ee6b0a22",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b7b1ff3a67c3354",
            "route_table_id": "rtb-0223e16efce4c5ccc",
            "subnet_id": "subnet-0d551d3e5ee6b0a22"
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:security-group/sg-093e8a6a7b36ad0bd",
            "description": "Access for zing systems and users",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093e8a6a7b36ad0bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "UST workspace",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/26",
                  "10.0.0.64/26",
                  "10.0.0.128/26",
                  "10.0.0.192/26",
                  "10.0.1.0/26",
                  "10.0.1.64/26",
                  "10.0.1.128/26",
                  "10.0.1.192/26",
                  "10.0.2.0/26",
                  "10.0.2.64/26",
                  "10.0.2.128/26",
                  "10.0.2.192/26",
                  "10.0.3.0/26",
                  "10.0.3.64/26",
                  "10.0.3.128/26",
                  "10.0.3.192/26"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/26",
                  "10.0.0.64/26",
                  "10.0.0.128/26",
                  "10.0.0.192/26",
                  "10.0.1.0/26",
                  "10.0.1.64/26",
                  "10.0.1.128/26",
                  "10.0.1.192/26",
                  "10.0.2.0/26",
                  "10.0.2.64/26",
                  "10.0.2.128/26",
                  "10.0.2.192/26",
                  "10.0.3.0/26",
                  "10.0.3.64/26",
                  "10.0.3.128/26",
                  "10.0.3.192/26"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "zing-Access",
            "name_prefix": "",
            "owner_id": "637423591266",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08aa64413764fa8df"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Private-Infra-2A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-053d056232e4a5dd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053d056232e4a5dd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Private-Infra-2A"
            },
            "tags_all": {
              "Name": "Zing-Private-Infra-2A"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Private-Infra-2B",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-0b06da97c6f86cadb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b06da97c6f86cadb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Private-Infra-2B"
            },
            "tags_all": {
              "Name": "Zing-Private-Infra-2B"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Private-Prod-2A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-0e6eba414c973daa7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6eba414c973daa7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Private-Prod-2A"
            },
            "tags_all": {
              "Name": "Zing-Private-Prod-2A"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Private-Prod-2B",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-04c83877427c7df91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c83877427c7df91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Private-Prod-2B"
            },
            "tags_all": {
              "Name": "Zing-Private-Prod-2B"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Private-Stage-2A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-041e4e0ddc9ac8111",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041e4e0ddc9ac8111",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Private-Stage-2A"
            },
            "tags_all": {
              "Name": "Zing-Private-Stage-2A"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Private-Stage-2B",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-046cd1d433bad7102",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046cd1d433bad7102",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Private-Stage-2B"
            },
            "tags_all": {
              "Name": "Zing-Private-Stage-2B"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Private-Test-2A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-06682df5e1f956fbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06682df5e1f956fbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Private-Test-2A"
            },
            "tags_all": {
              "Name": "Zing-Private-Test-2A"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Private-Test-2B",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-0c3ce5dcb1fe02bcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3ce5dcb1fe02bcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Private-Test-2B"
            },
            "tags_all": {
              "Name": "Zing-Private-Test-2B"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Public-Infra-2A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-01968f16b673877b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01968f16b673877b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Public-Infra-2A"
            },
            "tags_all": {
              "Name": "Zing-Public-Infra-2A"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Public-Infra-2B",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-0d551d3e5ee6b0a22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d551d3e5ee6b0a22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Public-Infra-2B"
            },
            "tags_all": {
              "Name": "Zing-Public-Infra-2B"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Public-Prod-2A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-07b80e92955ea9cc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b80e92955ea9cc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Public-Prod-2A"
            },
            "tags_all": {
              "Name": "Zing-Public-Prod-2A"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Public-Prod-2B",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-00817c06df8dc4734",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00817c06df8dc4734",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Public-Prod-2B"
            },
            "tags_all": {
              "Name": "Zing-Public-Prod-2B"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Public-Stage-2A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-06e37d1f09fac92af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e37d1f09fac92af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Public-Stage-2A"
            },
            "tags_all": {
              "Name": "Zing-Public-Stage-2A"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Public-Stage-2B",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-04f949d7c7c91ea8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f949d7c7c91ea8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Public-Stage-2B"
            },
            "tags_all": {
              "Name": "Zing-Public-Stage-2B"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Public-Test-2A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-031f62fe8c628b603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031f62fe8c628b603",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Public-Test-2A"
            },
            "tags_all": {
              "Name": "Zing-Public-Test-2A"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        },
        {
          "index_key": "Public-Test-2B",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:subnet/subnet-02c332c3f7d7efefa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c332c3f7d7efefa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423591266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Zing-Public-Test-2B"
            },
            "tags_all": {
              "Name": "Zing-Public-Test-2B"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08aa64413764fa8df"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423591266:vpc/vpc-08aa64413764fa8df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-05c13e5a49abdd246",
            "default_route_table_id": "rtb-04fc67f1513b638d4",
            "default_security_group_id": "sg-0cac68d373f6552b2",
            "dhcp_options_id": "dopt-0488d87df64e5dc24",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08aa64413764fa8df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04fc67f1513b638d4",
            "owner_id": "637423591266",
            "tags": {
              "Name": "Zing-vpc"
            },
            "tags_all": {
              "Name": "Zing-vpc"
            }
          }
        }
      ]
    }
  ]
}